@@ -1,10 +1,15 @@
 subarch r4k-ip22
 cpuinfo casals.cpuinfo
-majors 2.4
+majors 2.4 2.6
 flavour r4k-ip22
 kernel-2.4 kernel-image-2.4.27-r4k-ip22
+kernel-2.6 linux-image-2.6-r4k-ip22
 usable \
-  kernel-image-2.4.27-r4k-ip22
+  kernel-image-2.4.27-r4k-ip22 \
+  linux-image-2.6-r4k-ip22
 unusable \
   kernel-image-2.4.27-r5k-ip22 \
   kernel-image-2.4.27-sb1-swarm-bn
+  linux-image-2.6-r5k-ip32 \
+  linux-image-2.6-sb1-bcm91250a \
+  linux-image-2.6-sb1a-bcm91480b \
