@@ -1,0 +1,12 @@
+system type		: SGI O2
+processor		: 0
+cpu model		: R5000 V2.1  FPU V1.0
+BogoMIPS		: 0.00
+byteorder		: big endian
+wait instruction	: yes
+microsecond timers	: yes
+tlb_entries		: 48
+extra interrupt vector	: no
+hardware watchpoint	: no
+VCED exceptions		: not available
+VCEI exceptions		: not available
