@@ -1,0 +1,11 @@
+subarch r5k-ip32
+cpuinfo ip32-r5k.cpuinfo
+majors 2.6
+flavour r5k-ip32
+kernel-2.6 linux-image-2.6-r5k-ip32
+usable \
+  linux-image-2.6-r5k-ip32
+unusable \
+  linux-image-2.6-r4k-ip22 \
+  linux-image-2.6-sb1-bcm91250a \
+  linux-image-2.6-sb1a-bcm91480b
