@@ -18,4 +18,6 @@ unusable \
   linux-image-2.6.12-1-r10k-ip27 \
   linux-image-2.6.12-1-r10k-ip30 \
   linux-image-2.6.12-1-r5k-ip32 \
-  linux-image-2.6.12-1-sb1-swarm-bn
+  linux-image-2.6.12-1-sb1-swarm-bn \
+  linux-image-2.6-sb1-bcm91250a \
+  linux-image-2.6-sb1a-bcm91480b
