@@ -1,10 +1,15 @@
 subarch sb1-bcm91250a
 cpuinfo swarm.cpuinfo
-majors 2.4
-flavour sb1-swarm-bn
+majors 2.4 2.6
+flavour sb1-bcm91250a
 kernel-2.4 kernel-image-2.4.27-sb1-swarm-bn
+kernel-2.6 linux-image-2.6-sb1-bcm91250a
 usable \
-  kernel-image-2.4.27-sb1-swarm-bn
+  kernel-image-2.4.27-sb1-swarm-bn \
+  linux-image-2.6-sb1-bcm91250a
 unusable \
   kernel-image-2.4.27-r4k-ip22 \
   kernel-image-2.4.27-r5k-ip22
+  linux-image-2.6-r4k-ip22 \
+  linux-image-2.6-r5k-ip32 \
+  linux-image-2.6-sb1a-bcm91480b
