@@ -1,0 +1,45 @@
+system type		: SiByte BCM91x80A/B (BigSur)
+processor		: 0
+cpu model		: SiByte SB1A V0.0  FPU V0.3
+BogoMIPS		: 463.87
+wait instruction	: no
+microsecond timers	: yes
+tlb_entries		: 64
+extra interrupt vector	: yes
+hardware watchpoint	: yes
+ASEs implemented	: mdmx mips3d
+VCED exceptions		: not available
+VCEI exceptions		: not available
+processor		: 1
+cpu model		: SiByte SB1A V0.0  FPU V0.3
+BogoMIPS		: 466.94
+wait instruction	: no
+microsecond timers	: yes
+tlb_entries		: 64
+extra interrupt vector	: yes
+hardware watchpoint	: yes
+ASEs implemented	: mdmx mips3d
+VCED exceptions		: not available
+VCEI exceptions		: not available
+processor		: 2
+cpu model		: SiByte SB1A V0.0  FPU V0.3
+BogoMIPS		: 466.94
+wait instruction	: no
+microsecond timers	: yes
+tlb_entries		: 64
+extra interrupt vector	: yes
+hardware watchpoint	: yes
+ASEs implemented	: mdmx mips3d
+VCED exceptions		: not available
+VCEI exceptions		: not available
+processor		: 3
+cpu model		: SiByte SB1A V0.0  FPU V0.3
+BogoMIPS		: 466.94
+wait instruction	: no
+microsecond timers	: yes
+tlb_entries		: 64
+extra interrupt vector	: yes
+hardware watchpoint	: yes
+ASEs implemented	: mdmx mips3d
+VCED exceptions		: not available
+VCEI exceptions		: not available
