@@ -1,0 +1,11 @@
+subarch sb1a-bcm91480b
+cpuinfo sb1a-bcm91480b.cpuinfo
+majors 2.6
+flavour sb1a-bcm91480b
+kernel-2.6 linux-image-2.6-sb1a-bcm91480b
+usable \
+  linux-image-2.6-sb1a-bcm91480b
+unusable \
+  linux-image-2.6-r5k-cobalt \
+  linux-image-2.6-sb1-bcm91250a
+
