@@ -3,11 +3,16 @@ cpuinfo vaughan.cpuinfo
 majors 2.4
 flavour r5k-cobalt
 kernel-2.4 kernel-image-2.4.27-r5k-cobalt
+kernel-2.6 linux-image-2.6-r5k-cobalt
 usable \
-  kernel-image-2.4.27-r5k-cobalt
+  kernel-image-2.4.27-r5k-cobalt \
+  linux-image-2.6-r5k-cobalt
 unusable \
   kernel-image-2.4.27-r3k-kn02 \
   kernel-image-2.4.27-r4k-kn04 \
   kernel-image-2.4.27-r5k-lasat \
   kernel-image-2.4.27-sb1-swarm-bn \
-  kernel-image-2.4.27-xxs1500
+  kernel-image-2.4.27-xxs1500 \
+  linux-image-2.6-sb1-bcm91250a \
+  linux-image-2.6-sb1a-bcm91480b
+
