@@ -6,6 +6,9 @@ base-installer (1.51) unstable; urgency=low
     test suite.
   * Remove kernel detection for LASAT since this machine was never
     supported.
+  * Add kernel detection for 2.6 mips and mipsel kernels.
+  * Add test suite entries for Broadcom BCM91480B evaluation board (aka
+    "BigSur") and SGI O2 (IP32).
 
  -- Martin Michlmayr <tbm@cyrius.com>  Fri, 17 Mar 2006 20:31:16 +0000
 
